Fixes for network interfaces calls, and implement storage volume callbacks
